--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "MATCO Teletekst",
   "main": "main.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "start": "nodemon build/main.js"
   },
   "keywords": [
     "Teletext",
